# photo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  photo.cpp
